# Fast-api-tutorial

./: main.py  pyproject.toml
Backend/: .gitignore  README.md
Backend/app/: app.py  db.py  images.py  schemas.py  user.py
Frontend/sample-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
Frontend/sample-frontend/src/: App.tsx  index.css  main.tsx
Frontend/sample-frontend/src/components/: Header.tsx
Frontend/sample-frontend/src/contexts/: PostContext.tsx
Frontend/sample-frontend/src/pages/: Auth.tsx  Feed.tsx  Index.tsx
app/: app.py  db.py  schemas.py  user.py  visualize_model.py
frontend-sample/: index.html
frontend-sample/src/: App.tsx  index.css
frontend-sample/src/components/: PostCard.tsx  UploadModal.tsx
frontend-sample/src/contexts/: AuthContext.tsx  PostContext.tsx
frontend-sample/src/lib/: api.ts
frontend-sample/src/pages/: Auth.tsx  Index.tsx
frontend-sample/src/types/: post.ts  user.ts
learning/: .gitignore
