[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "imagekitio>=5.0.0",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy-schemadisplay>=2.0",
    "uvicorn[standard]>=0.40.0",
]
